# draw

./: .gitignore  CMakeLists.txt  README.md  main.cpp
components/: CMakeLists.txt
components/entities/: CMakeLists.txt
components/entities/inc/: abstract_object.h  engine.h  plain_dynamic_object.h  plain_static_object.h
components/entities/src/: engine.cpp  plain_dynamic_object.cpp  plain_static_object.cpp
components/game/: CMakeLists.txt
components/game/inc/: ball.h  block.h  game.h  level_generator.h  platform.h
components/game/src/: ball.cpp  block.cpp  game.cpp  level_generator.cpp  platform.cpp
components/media/: CMakeLists.txt
components/media/inc/: abstract_shape.h  colors.h  context_handler.h  quad_shape.h  resource_manager.h  shader.h  sprite.h  texture.h
components/media/src/: context_handler.cpp  quad_shape.cpp  shader.cpp  sprite.cpp  texture.cpp
include/: camera.h  cube.h  flat.h  lamp.h  mesh.h  model.h  object.h  shader.h  texture.h
lib/: CMakeLists.txt
lib/soil/: CMakeLists.txt
lib/soil/inc/SOIL/: SOIL.h
lib/soil/src/: SOIL.c
resources/levels/: level0.txt  level1.txt  level2.txt
resources/shaders/: fragment.glsl  vertex.glsl
shaders/: fragment.shader  fragment.txt  fragment_render.shader  vertex.shader
